# slurm-webapp

./: .env  .gitignore  Cargo.toml
.cargo/: config.toml
.sqlx/: query-0096e34b5770f417dade255849fd78b95ec0305b121a9b0e6dd5df92265b4f67.json  query-0731a0d770c5765a7a9463e39133335cf909bb84970ce6702e32e605ad51a15b.json  query-0b66b0a9603daf4133c71ec2c6042d0e8fe49b96dfdd784588daf16df4500107.json  query-2c3f08640d2b0f87a032efdb7bb58335999462e50a4893a0637138915558901f.json  query-2f38eba9ca96be979b71d1c0c3e6245f257fbcd998787f4289f82baea2b393be.json  query-363af6f93f330afc5ac2304b3c43c1cf5ee9669dbceaf4b4778c9184471ee265.json  query-3a0944d10a77168a1e8c23968357e1b02a9d6f1fe1eabd958485547ac9f4dd3f.json  query-47c2a269b95de4f790326c192ac66dd95c03b598457012870b3f6687c50d6459.json  query-4bac7fcfe2539e13480abff7f11549682a02bcf1291b2a580702109b9eb7a49f.json  query-59007d346c1c02c6fb5c1f4e4c7b61b77630a1226467bd0ac82db66239186f71.json  query-5ddd1f6b1ac85ec891fbcafa8f540e73824cd093a4cd80014ab9dcd0f86605ac.json  query-6031ec7e33f72539214996eb506325b3a627c1a8f37526b471d159717441e2f9.json  query-8564e3ced22c4c39c2d298f2d26ef46e35e9866b4ab16457a7357b24b3127d36.json  query-9fcfa0a4b63023eede4b3f0a4033cc3e6fd6b4fa1554d5383ced0c6ac136a7ca.json  query-b330e372a2d5d7ce072f21a747db40a02ab28d8641fa619fc01e515b55b4ceb9.json  query-b6d0f621af1c015f21114b5d299f444e11d1df21fddff97afae0319615e38cfb.json  query-c1ce94b78868100606c7d07f1e0e14ec2b9e0d81af0f22dd9265a0fe18e8258e.json  query-c353ff97c6c5e0d431c9c4b59032de625c8511330bbd363267bd4eb6aad642de.json  query-c985f1f7d107b1255ea7db1d38b7db410ca0b6e86e1c07b87e65587ba6bea1f9.json  query-cb8fb4dc2b091a21f2bbb21ce0a5e95d09db4d8f2e54539f90984bee7e03270c.json  query-cd6c4937410524654943918a5310141b54357055c0620fa38e3ce3a7a4b29cc9.json  query-da41e4f478a132cc6af39c3274e521662ce7161e4ffead4b0f553dccc1fb2b64.json  query-dfdaaae94a76da8c91f0217d18fe1b75b8945c613bb87672a532dce51c80eb31.json  query-e810bdcb820a9212319e6a779ed52899de63506b6b9e20030d8d0e177c57adcf.json  query-ed60fe4430da499f2b2b7a57e48522d0467321e6d17e579c7e900a40d91124fa.json  query-f932e0a2b5f72b4350963bdbe59f84484516a8a98b5fa7ae529c6e24ee03afaa.json
backend/: Cargo.toml
backend/src/: main.rs
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.vue  api.js  style.css
frontend/src/components/: Dashboard.vue  JobsView.vue  NodesView.vue
frontend/src/lib/: api.ts  types.ts
frontend/src/lib/components/: JobTable.svelte  NodeList.svelte  PartitionList.svelte
frontend/src/lib/components/ui/: Badge.svelte  Card.svelte  Table.svelte  TableBody.svelte  TableCell.svelte  TableHead.svelte  TableHeader.svelte  TableRow.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
migrations/: 20260130212226_init.sql
monitor/: Cargo.toml
monitor/src/: main.rs  ssh.rs
slurm-common/: Cargo.toml
slurm-common/src/: db.rs  lib.rs  parser.rs  scontrol.rs  table.rs
worker/: Cargo.toml
worker/src/: main.rs
