[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
slurm-common = { path = "../slurm-common" }
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["chrono", "macros", "migrate", "runtime-tokio", "runtime-tokio-rustls", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
dotenv = "0.15.0"
