[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
slurm-common = { path = "../slurm-common" }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["chrono", "runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5.56", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11"
