[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
slurm-common = { path = "../slurm-common", features = ["db"] }
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["chrono", "runtime-tokio", "sqlite", "tls-native-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"]}
anyhow = "1.0"
clap = { version = "4.5.56", features = ["derive"] }
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
which = "8.0.0"
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
russh-config = "0.57.0"
russh = "0.57.0"
russh-sftp = "2.1.1"

