[package]
name = "slurm-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio", "tls-native-tls", "macros", "chrono"] }

anyhow = "1.0"
serde_json = "1.0"



