[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
slurm-common = { path = "../slurm-common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
rand = "0.8" # For mock data generation
chrono = "0.4.43"
tokio = { version = "1.49.0", features = ["time", "fs", "macros", "rt-multi-thread"] }
